cluster/firefly/firefly.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  labels:
    app: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: docker.io/fireflyiii/core:latest@sha256:5317d22f4f559a54d3a28e7c08955b053157db243b9bf245deec2db2c0295c48
          resources:
            requests:
              cpu: 150m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 200Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: file-upload
              mountPath: /var/www/html/storage/upload
            - name: htaccess
              mountPath: /var/www/html/.htaccess
              subPath: htaccess
      volumes:
        - name: file-upload
          persistentVolumeClaim:
            claimName: firefly-uploads
        - name: htaccess
          configMap:
            name: firefly-htaccess
            items:
              - key: htaccess
                path: htaccess
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
spec:
  selector:
    app: firefly
  ports:
    - protocol: TCP
      port: 8080
